Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.5(EOL)
-
None
Description
Spider has maturity "stable" in 10.3-10.4, but it's back to "beta" in 10.5. After raising the server maturity level to stable, the library doesn't load anymore:
2020-06-19 17:27:43 0 [ERROR] mariadbd: Can't open shared library 'ha_spider.so' (errno: 1, Loading of beta plugin SPIDER is prohibited by --plugin-maturity=gamma)
|
It means that it will stop working after upgrade, unless the users set plugin_maturity option to a lower level. It needs to be considered before the release and either changed, or documented.