MDEV-22967 Spider does not load in 10.5 with default settings

increase spider maturity accordingly